--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <li  skill-description="Mysql"><object type="image/svg+xml" data="images/mysql.svg"></object>Mysql</li>
                     <li  skill-description="mongodb"><object type="image/svg+xml" data="images/mongodb.svg"></object>Mongodb</li>
                     <li  skill-description="Oracle"><object type="image/svg+xml" data="images/oracle.svg"></object>Oracle</li>
+                    <li  skill-description="Firebase"><object type="image/svg+xml" data="images/firebase.svg"></object>Firebase</li>
                 </ul>
             </section>
             <section>
