--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
     <section id="about-me-section" class="section">
 			<h2>About me</h2>
-			<p>I am a Full Stack Web & mobile Developer from Mauritania. I have a passion for creating seamless, beautiful and creative websites. I have experience with various programming languages and specifically web technologies. Life is a continuous learning process, so work makes me more rigorous.<br>
+			<p>I am a Full Stack Web & mobile Developer from India. I have a passion for creating seamless, beautiful and creative websites. I have experience with various programming languages and specifically web technologies. Life is a continuous learning process, so work makes me more rigorous.<br>
 			<a href="mailto:kavinnares@gmail.com">Hire me</a></p>
     </section>
     
