--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="go-back-button"> <i class="fas fa-chevron-left"></i> Menu</div>
     <section id="about-me-intro-section" class="section">
         <p>Full Stack Web and Mobile Developer from India. I have a passion for creating seamless, beautiful and creative websites. I have experience with various programming languages and specifically web technologies. I am currently available to hire.<br></p>
-        <a href="mailto:ziyadkader@gmail.com"> Get in touch</a>
+        <a href="mailto:kavinnares@gmail.com"> Get in touch</a>
     </section>
     <!-- menu -->
     <header id="menu">
