--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </ul>
             </section>
             <section>
-                <h4>Human languages <img class="section-logos" src="./images/languages.svg"></h4>
+                <h4>Linguistic communication<img class="section-logos" src="./images/languages.svg"></h4>
                 <ul>
                     <li>English</li>
                     <li>Tamil</li>
