--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<h2>About me</h2>
 			<p>I am a Full Stack Web & mobile Developer from India. I have a passion for creating seamless, beautiful and creative websites. I have experience with various programming languages and specifically web technologies. Life is a continuous learning process, so work makes me more rigorous.<br>
 			<a href="mailto:kavinnares@gmail.com">Hire me</a></p>
-			<a href="https://drive.google.com/file/d/1ojz7Of3Jtv786xEMDKYE9-pM9wYp1x9F/view?usp=sharing">Download CV</a></p>
+			<!--a href="https://drive.google.com/file/d/1ojz7Of3Jtv786xEMDKYE9-pM9wYp1x9F/view?usp=sharing">Download CV</a></p-->
         </section>
     
     <!-- Skills -->
@@ -67,8 +67,8 @@
                     <li skill-description="php"><object type="image/svg+xml" data="images/php.svg"></object>PHP</li>
                     <li skill-description="Java"><object type="image/svg+xml" data="images/python.svg"></object>Python</li>
                     <li skill-description="Java"><object type="image/svg+xml" data="images/java.svg"></object>Java</li>
-                    <li skill-description="Java"><object type="image/svg+xml" data="images/dart.svg"></object>Dart</li>
-                    <li skill-description="Java"><object type="image/svg+xml" data="images/go.svg"></object>Go</li>
+                    <!--li skill-description="Java"><object type="image/svg+xml" data="images/dart.svg"></object>Dart</li-->
+                    <!--li skill-description="Java"><object type="image/svg+xml" data="images/go.svg"></object>Go</li-->
                 </ul>
                 
             </section>
