fix: updated skills

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <h4>Programmings languages <img class="section-logos" src="./images/programming.svg"></h4>
                 <ul>
                     <li skill-description="Javascript"><object type="image/svg+xml" data="images/javascript.svg"></object>JavaScript</li>
-                    <li skill-description="php"><object type="image/svg+xml" data="images/php.svg"></object>PHP</li>
-                    <li skill-description="Java"><object type="image/svg+xml" data="images/python.svg"></object>Python</li>
+                    <!--li skill-description="php"><object type="image/svg+xml" data="images/php.svg"></object>PHP</li-->
+                    <li skill-description="python"><object type="image/svg+xml" data="images/python.svg"></object>Python</li>
                     <li skill-description="Java"><object type="image/svg+xml" data="images/java.svg"></object>Java</li>
                     <!--li skill-description="Java"><object type="image/svg+xml" data="images/dart.svg"></object>Dart</li-->
                     <!--li skill-description="Java"><object type="image/svg+xml" data="images/go.svg"></object>Go</li-->
